--- a/Acardemy/registroUserAcardemy.html
+++ b/Acardemy/registroUserAcardemy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Acardemy es una plataforma de aprendizaje por medio de flashcards para ayudarte a recordar esos temas que mas se te dificultan, esta pagina es la principal de la plataforma">
+    <meta name="description" content="Acardemy es una plataforma de aprendizaje por medio de flashcards para ayudarte a recordar esos temas que mas se te dificultan, esta pagina es la de registro de la plataforma">
     <meta name="autor" content="Julian Cantillo Cortina, Mateo Payares, Luis Goez">
     <title>Acardemy - registro</title>
     <link rel="favicon" href="favicon/faviconBlack.jpg" type="icon/jpg" sizes="334x267">
@@ -49,7 +49,7 @@
                     <button class="btn" type="submit">Registrarse</button>
                 </form>
                 <div class="registrate">
-                    <p class="texto">¿Ya tienes una cuenta?<a class="singup" href="#">Inicia sesion aqui</a></p>
+                    <p class="texto">¿Ya tienes una cuenta?<a class="login" href="#">Inicia sesion aqui</a></p>
             </main>
         </div>
     </div>
