creacion de css index

--- a/Acardemy/indexAcardemy.html
+++ b/Acardemy/indexAcardemy.html
@@ -8,7 +8,7 @@
     <meta name="autor" content="Julian Cantillo Cortina, Mateo Payares, Luis Goez">
     <title>Acardemy - Inicio</title>
     <link rel="favicon" href="favicon/faviconBlack.jpg" sizes="334x267">
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="indexAcardemy.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <header class="cabecera">
             <div class="logo">
                 <a class="enlace_logo" href="#">
-                    <span class="nombre">Acardemy</span>
+                    <h1 class="nombre">Acardemy</h1>
                 </a>
             </div>
             <!--Menu de navegacion-->
